9/8/11 temporarily hide E-field features in "Real Molecules" tab, for interview version
9/8/11 factor out duplicate code in DiatomicElectrostaticPotentialNode.updatePaint
9/8/11 set correct endpoints for gradient in 2D electrostatic potential
9/8/11 add Bond.getLength, useful in 2D isosurface computations
9/8/11 first pass at gradient paints for 2D electrostatic potential (path clipping is incorrect, gradient endpoints are a little off)
9/8/11 update 2D isosurfaces only when they're visible
9/7/11 implement simple color change for electrostatic potential, based on polarity
9/7/11 handle neutral polarity specially in electron density gradient, tweak alpha
9/7/11 account for molecule transform when creating electron density gradient
9/7/11 first pass at 2D electron density isosurface, does not account for molecule rotation
9/7/11 prepare separate classes for 2D representations of electrostatic potential and electron density
# 0.00.18 (56228) Sep 6, 2011
9/6/11 fix sign on partial charges
8/24/11 remove bad code from MPCanvas.updateLayout that was interfering with CenteredStage transform strategy
8/24/11 add stage bounds node, for layout debugging
8/24/11 convert rotate cursor to 32x32 gif, to work around Windows/Java bug #4842475
8/23/11 restore rotate cursor
# 0.00.17 (55737) Aug 23, 2011
8/23/11 temporarily disable rotate cursor
8/23/11 change canvas transform strategy from RenderingSizeStrategy to CenteredStage
8/23/11 fix unusual case where pressing Reset All results in "UnsupportedOperationException: Cannot normalize a zero-magnitude vector"
8/23/11 remove duplicate "do script" functionality from JmolViewerNode
8/23/11 add code (currently disabled) for "centered stage" transform strategy
8/23/11 pad rotate cursor with whitespace, so that it's 32x32, required by Windows
8/23/11 add major and minor tick marks to EN sliders
8/22/11 fix test program for EN sliders, change snap interval to 0.2